2022-05-18T08:12:36Z:
* notice: last 14d: all unq: 277 1
* notice: prev accum: outdated-all outdated-unq / all unq: 81 5 / 352 16
* notice: next accum: outdated-all outdated-unq / all unq: 81 5 / 358 17
* notice: prev exec diff / last date diff / accum: unq all: +1 +6 -0 -0 / +1 +6 -0 -0 / 1 6
* notice: changed dates: [2022-05-18]

2022-05-18T00:39:18Z:
* notice: last 14d: all unq: 271 1
* notice: prev accum: outdated-all outdated-unq / all unq: 65 4 / 365 16
* notice: next accum: outdated-all outdated-unq / all unq: 81 5 / 352 16
* notice: prev exec diff / last date diff / accum: unq all: +0 +6 -0 -19 / +1 +21 -0 -0 / 1 21
* notice: changed dates: [2022-05-04 2022-05-16 2022-05-17]

2022-05-17T16:18:25Z:
* notice: last 14d: all unq: 300 1
* notice: prev accum: outdated-all outdated-unq / all unq: 65 4 / 361 16
* notice: next accum: outdated-all outdated-unq / all unq: 65 4 / 365 16
* notice: prev exec diff / last date diff / accum: unq all: +0 +4 -0 -0 / +1 +15 -0 -0 / 1 15
* notice: changed dates: [2022-05-16 2022-05-17]

2022-05-17T08:13:08Z:
* notice: last 14d: all unq: 296 1
* notice: prev accum: outdated-all outdated-unq / all unq: 65 4 / 350 15
* notice: next accum: outdated-all outdated-unq / all unq: 65 4 / 361 16
* notice: prev exec diff / last date diff: unq all: +1 +11 -0 -0 / +1 +11 -0 -0
* notice: changed dates: [2022-05-16 2022-05-17]

2022-05-17T00:46:57Z:
* notice: last 14d: all unq: 285 1
* notice: prev accum: outdated-all outdated-unq / all unq: 65 4 / 331 14
* notice: next accum: outdated-all outdated-unq / all unq: 65 4 / 350 15
* notice: prev exec diff / last date diff: unq all: +1 +19 -0 -0 / +1 +19 -0 -0
* notice: changed dates: [2022-05-16]

2022-05-15T16:12:35Z:
* notice: last 14d: all unq: 266 1
* notice: prev accum: outdated-all outdated-unq / all unq: 9 3 / 282 14
* notice: next accum: outdated-all outdated-unq / all unq: 65 4 / 331 14
* notice: prev json diff / prev day diff: unq all: +0 +0 -0 -0 / +0 +0 -0 -49