@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-18T00:39:18Z",
-  "count" : 6,
-  "count_minmax" : [ 6, 25 ],
-  "count_decinc" : [ -19, +0 ],
+  "timestamp" : "2022-05-18T16:12:57Z",
+  "count" : 2,
+  "count_minmax" : [ 2, 25 ],
+  "count_decinc" : [ -23, +0 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +0 ]
