@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-05-18T08:12:36Z",
-  "count" : 6,
-  "count_minmax" : [ 6, 6 ],
-  "count_decinc" : [ -0, +6 ],
+  "timestamp" : "2022-05-18T16:12:57Z",
+  "count" : 13,
+  "count_minmax" : [ 6, 13 ],
+  "count_decinc" : [ -0, +13 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
