@@ -1,14 +1,14 @@
 {
-  "timestamp" : "2022-05-18T08:12:36Z",
+  "timestamp" : "2022-05-18T16:12:57Z",
   "count_outdated" : 81,
   "uniques_outdated" : 5,
-  "count" : 358,
+  "count" : 361,
   "uniques" : 17,
   "views" : [
     {
       "timestamp": "2022-05-04T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 6, 25 ],
+      "count": 2,
+      "count_minmax": [ 2, 25 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     },
@@ -84,8 +84,8 @@
     },
     {
       "timestamp": "2022-05-18T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 6, 6 ],
+      "count": 13,
+      "count_minmax": [ 6, 13 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
