@@ -1,10 +1,10 @@
 {
-  "count": 277,
+  "count": 280,
   "uniques": 1,
   "views": [
     {
       "timestamp": "2022-05-04T00:00:00Z",
-      "count": 6,
+      "count": 2,
       "uniques": 1
     },
     {
@@ -59,7 +59,7 @@
     },
     {
       "timestamp": "2022-05-18T00:00:00Z",
-      "count": 6,
+      "count": 13,
       "uniques": 1
     }
   ]
