@@ -1,3 +1,10 @@
+2022-05-18T16:12:57Z:
+* notice: last 14d: unq all: 1 280
+* notice: prev accum: outdated-unq outdated-all / unq all: 5 81 / 17 358
+* notice: next accum: outdated-unq outdated-all / unq all: 5 81 / 17 361
+* notice: prev exec diff / last date diff / accum: unq all: +0 +7 -0 -4 / +1 +13 -0 -0 / 1 13
+* notice: changed dates: [2022-05-04 2022-05-18]
+
 2022-05-18T08:12:36Z:
 * notice: last 14d: all unq: 277 1
 * notice: prev accum: outdated-all outdated-unq / all unq: 81 5 / 352 16
